--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -9,6 +9,8 @@
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceImplementation="com.github.jyoo980.reachhover.services.MyApplicationService"/>
         <projectService serviceImplementation="com.github.jyoo980.reachhover.services.MyProjectService"/>
+        <editorFactoryMouseMotionListener
+                implementation="com.github.jyoo980.reachhover.listeners.EditorHoverListener"/>
     </extensions>
 
     <applicationListeners>
