Adding classes for reachability hover popup buttons
  * The `ReachabilityButton` supertype should be extended by all buttons
    related to reachability questions.
  * Currently have a button for answering "Where did x come from" questions.
  * Will need to create a popup manager to create/dispatch calls.

--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -1,3 +1,9 @@
 name=My Plugin
 applicationService=Application service
 projectService=Project service: {0}
+
+# Reachability Question Template Strings
+createdQuestion="How was {0} created?"
+
+# Documentation Popup Question
+showDocumentation="Show types and documentation?"
