Removing redundant quotation marks from bundle props

--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -3,7 +3,7 @@ applicationService=Application service
 projectService=Project service: {0}
 
 # Reachability Question Template Strings
-createdQuestion="How was {0} created?"
+createdQuestion=How was {0} created?
 
 # Documentation Popup Question
-showDocumentation="Show types and documentation?"
+showDocumentation=Show types and documentation?
