Adding basic popup actions on hover
  * Still need to find a way to close the popup on navigating away.
  * Still need to wire up the actual actions invoked when buttons are clicked.

--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -4,6 +4,7 @@ projectService=Project service: {0}
 
 # Reachability Question Template Strings
 createdQuestion=How was {0} created?
+modifiedQuestion=How is {0} modified?
 
 # Documentation Popup Question
 showDocumentation=Show types and documentation?
