Adding base implementation of an EditorHover listener (#2)
* Adding base implementation of an EditorHover listener

  * Mainly extracting functionality already implemented in my fork of IntelliJ
    CE.
  * Able to extract the PsiElement under the hover.
  * TODO: need to check whether the element is of a type we're interested in:
    * A method argument.
    * A local variable.

* Adding dependency on com.intellij.java for PSI access

* Adding extension methods for PsiElements

  * Adding a method for determining whether an element is a non-literal
    method argument.
  * Adding a method for determining whether an element is a non-literal
    local variable.

* Cleaning up code and removing use of depcrecated getter

* Addressing review comments

  * Simplifying PsiElement extension methods.
  * Simplifying method impl. to extract the parent of a PsiElement.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -5,10 +5,13 @@
     <vendor>jyoo980</vendor>
 
     <depends>com.intellij.modules.platform</depends>
+    <depends>com.intellij.modules.java</depends>
 
     <extensions defaultExtensionNs="com.intellij">
         <applicationService serviceImplementation="com.github.jyoo980.reachhover.services.MyApplicationService"/>
         <projectService serviceImplementation="com.github.jyoo980.reachhover.services.MyProjectService"/>
+        <editorFactoryMouseMotionListener
+                implementation="com.github.jyoo980.reachhover.listeners.EditorHoverListener"/>
     </extensions>
 
     <applicationListeners>
