Basic "Quick Reachability View" being invoked
  * Need to render the reachability elements in the view window.
    * Take a look at `ReachabilityViewElement#text`.
  * Not sure if the `ReachabilityViewElementSessionFactory` is needed, come
    back later to check.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -12,6 +12,8 @@
         <projectService serviceImplementation="com.github.jyoo980.reachhover.services.MyProjectService"/>
         <editorFactoryMouseMotionListener
                 implementation="com.github.jyoo980.reachhover.listeners.EditorHoverListener"/>
+        <implementationViewSessionFactory implementation="com.github.jyoo980.reachhover.codeinsight.ReachabilityElementViewSessionFactory"/>
+
     </extensions>
 
     <applicationListeners>
