Collecting required static slice metadata (#15)
* Adding metadata transformer impl. of generic tran.

  * Able to collect the element, file, and line in file for a given slice
    element.
  * Need to figure out what other metadata we need.

* Fixing issue with unbound recursion

  * Algorithm was correct, datatypes had an unusual check for equality.
  * Appears to work with direct and indirect recursion (so far).

* Refactoring ReachabilityButton.kt to use constructor fields

* Adding impl. of ReachabilityViewElement

  * Will need to create a view session to hold these elements eventually.
  * Investigate how much to re-use from PsiImplementationViewSession.

* Basic "Quick Reachability View" being invoked

  * Need to render the reachability elements in the view window.
    * Take a look at `ReachabilityViewElement#text`.
  * Not sure if the `ReachabilityViewElementSessionFactory` is needed, come
    back later to check.

* Applying Spotless lints

* Fixing build issues related to uncommitted code

* Adding impl. of ReachabilityViewElement#text

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -10,6 +10,8 @@
     <extensions defaultExtensionNs="com.intellij">
         <editorFactoryMouseMotionListener
                 implementation="com.github.jyoo980.reachhover.listeners.EditorHoverListener"/>
+        <implementationViewSessionFactory implementation="com.github.jyoo980.reachhover.codeinsight.ReachabilityElementViewSessionFactory"/>
+
     </extensions>
 
 </idea-plugin>
