Adding local analytics service
  * Able to get num. clicks for how often dataflow analysis was invoked.
  * Still need to find a way to be notified/observe when a new file is opened
    in the editor or when focus is shifted.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -11,5 +11,9 @@
         <editorFactoryMouseMotionListener
                 implementation="com.github.jyoo980.reachhover.listeners.EditorHoverListener"/>
     </extensions>
-
+    <applicationListeners>
+        <listener
+                class="com.github.jyoo980.reachhover.analytics.ReachHoverAnalyticsService"
+                topic="com.intellij.openapi.actionSystem.ex.AnActionListener"/>
+    </applicationListeners>
 </idea-plugin>
