Adding local analytics service (#41)
* Adding local analytics service

  * Able to get num. clicks for how often dataflow analysis was invoked.
  * Still need to find a way to be notified/observe when a new file is opened
    in the editor or when focus is shifted.

* Adding more analytics

  * `reach-hover` specific actions are now being recorded via the plugin.
  * To investigate: sometimes events aren't being captured... look at this
    again with other projects.

* Adding listener for file open/close

  * Now able to detect when a file is open/closed.
  * Getting the name of the file is also possible, but not sure if that's
    required.

* Adding hashing to file names

  * Should log the hashes of file names, not the actual files themselves.
  * Fixing error where `numTimesDataflowInvoked` was being incremented in the
    case where a `reach-hover` event was detected.

--- a/src/main/resources/META-INF/plugin.xml
+++ b/src/main/resources/META-INF/plugin.xml
@@ -11,5 +11,12 @@
         <editorFactoryMouseMotionListener
                 implementation="com.github.jyoo980.reachhover.listeners.EditorHoverListener"/>
     </extensions>
-
+    <applicationListeners>
+        <listener
+                class="com.github.jyoo980.reachhover.analytics.ReachHoverAnalyticsService"
+                topic="com.intellij.openapi.actionSystem.ex.AnActionListener"/>
+        <listener
+                class="com.github.jyoo980.reachhover.analytics.FileListener"
+                topic="com.intellij.openapi.fileEditor.FileEditorManagerListener"/>
+    </applicationListeners>
 </idea-plugin>
