--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -1,4 +1,5 @@
 name=My Plugin
+reachhover.notification.group=ReachHover
 applicationService=Application service
 projectService=Project service: {0}
 
