Making ReachHover "dumb-mode" safe
When IntelliJ is in "dumb-mode" (unfortunate phrasing), most of its static
analysis facilities are not available. In fact, invoking most features will
lead to the IDE throwing an `IndexNotReadyException`.

Previously, `reach-hover` was not respecting this. Now, it displays a warning
to the end-user stating that it can be invoked after background tasks, such
as indexing, are complete.

--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -9,3 +9,6 @@ modifiedQuestion=How is {0} modified?
 
 # Documentation Popup Question
 showDocumentation=Show types and documentation?
+
+# ReachHover utility text
+dumbModeMessage=Please wait until background tasks in IntelliJ have finished before invoking ReachHover
