Updating warning message
The previous warning message would not make sense if users did not actively
invoke `reach-hover`. Updating it to make more sense.

--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -1,7 +1,5 @@
 name=My Plugin
 reachhover.notification.group=ReachHover
-applicationService=Application service
-projectService=Project service: {0}
 
 # Reachability Question Template Strings
 createdQuestion=How was {0} created?
@@ -11,4 +9,4 @@ modifiedQuestion=How is {0} modified?
 showDocumentation=Show types and documentation?
 
 # ReachHover utility text
-dumbModeMessage=Please wait until background tasks in IntelliJ have finished before invoking ReachHover
+dumbModeMessage=ReachHover is not available while IntelliJ is performing background tasks
