Making ReachHover "dumb-mode" safe (#52)
* Making ReachHover "dumb-mode" safe

When IntelliJ is in "dumb-mode" (unfortunate phrasing), most of its static
analysis facilities are not available. In fact, invoking most features will
lead to the IDE throwing an `IndexNotReadyException`.

Previously, `reach-hover` was not respecting this. Now, it displays a warning
to the end-user stating that it can be invoked after background tasks, such
as indexing, are complete.

* Updating warning message

The previous warning message would not make sense if users did not actively
invoke `reach-hover`. Updating it to make more sense.

--- a/src/main/resources/messages/MyBundle.properties
+++ b/src/main/resources/messages/MyBundle.properties
@@ -1,7 +1,5 @@
 name=My Plugin
 reachhover.notification.group=ReachHover
-applicationService=Application service
-projectService=Project service: {0}
 
 # Reachability Question Template Strings
 createdQuestion=How was {0} created?
@@ -9,3 +7,6 @@ modifiedQuestion=How is {0} modified?
 
 # Documentation Popup Question
 showDocumentation=Show types and documentation?
+
+# ReachHover utility text
+dumbModeMessage=ReachHover is not available while IntelliJ is performing background tasks
