--- a/gradle.properties
+++ b/gradle.properties
@@ -4,24 +4,24 @@
 pluginGroup = com.github.jyoo980.reachhover
 pluginName = reach-hover
 # SemVer format -> https://semver.org
-pluginVersion = 1.5.0
+pluginVersion = 1.4.0
 
 
 # See https://plugins.jetbrains.com/docs/intellij/build-number-ranges.html
 # for insight into build numbers and IntelliJ Platform versions.
-pluginSinceBuild = 231
-pluginUntilBuild = 231.*
+pluginSinceBuild = 213
+pluginUntilBuild = 223
 
 # IntelliJ Platform Properties -> https://github.com/JetBrains/gradle-intellij-plugin#intellij-platform-properties
 platformType = IC
-platformVersion = 2023.1
+platformVersion = 2022.2
 
 # Plugin Dependencies -> https://plugins.jetbrains.com/docs/intellij/plugin-dependencies.html
 # Example: platformPlugins = com.intellij.java, com.jetbrains.php:203.4449.22
 platformPlugins =
 
 # Java language level used to compile sources and to generate the files for - Java 11 is required since 2020.3
-javaVersion = 17
+javaVersion = 11
 
 # Gradle Releases -> https://github.com/gradle/gradle/releases
 gradleVersion = 7.4
